[gd_scene load_steps=18 format=3 uid="uid://bwk7tjlhnu23j"]

[ext_resource type="Theme" uid="uid://dc6c1peo4pfyr" path="res://addons/dialogue_nodes/themes/bubbly.theme" id="1_qerq3"]
[ext_resource type="Script" path="res://examples/demo.gd" id="2_5ddyy"]
[ext_resource type="Resource" uid="uid://dj818hys8f3u8" path="res://examples/ExampleBasic.tres" id="3_yex7d"]
[ext_resource type="Resource" uid="uid://btriowhsx04c2" path="res://examples/ExampleBBCodes.tres" id="4_ay03t"]
[ext_resource type="Resource" uid="uid://bjme2drtas671" path="res://examples/ExampleBranching.tres" id="5_ifbb7"]
[ext_resource type="Resource" uid="uid://c303qivlsn30t" path="res://examples/ExampleCharacters.tres" id="6_arg21"]
[ext_resource type="Resource" uid="uid://b4os1qum2hx0x" path="res://examples/ExampleSignals.tres" id="7_18syg"]
[ext_resource type="Resource" uid="uid://cbu4k4hs8fk5s" path="res://examples/ExampleVariables.tres" id="8_4fu3f"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="9_s4y1y"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="10_wwm1y"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="11_iuh66"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="12_cnev0"]

[sub_resource type="Curve" id="1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.67805, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_fvoor"]
offsets = PackedFloat32Array(0, 0.332268, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="RichTextEffect" id="RichTextEffect_wmns8"]
script = ExtResource("10_wwm1y")

[sub_resource type="RichTextEffect" id="RichTextEffect_jqe1g"]
script = ExtResource("11_iuh66")

[sub_resource type="RichTextEffect" id="RichTextEffect_j1cit"]
script = ExtResource("12_cnev0")

[node name="Demo" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qerq3")
script = ExtResource("2_5ddyy")
demos = Array[Resource("res://addons/dialogue_nodes/objects/DialogueData.gd")]([ExtResource("3_yex7d"), ExtResource("4_ay03t"), ExtResource("5_ifbb7"), ExtResource("6_arg21"), ExtResource("7_18syg"), ExtResource("8_4fu3f")])

[node name="DemoSelector" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -62.0
offset_right = 67.5
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = 56.5
offset_right = 52.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Demo"

[node name="Locale" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 82.0
offset_bottom = 64.0
item_count = 2
selected = 0
popup/item_0/text = "en"
popup/item_0/id = 0
popup/item_1/text = "ja"
popup/item_1/id = 1

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(600, 200.498)
emitting = false
amount = 64
lifetime = 1.5
one_shot = true
speed_scale = 2.5
explosiveness = 0.9
randomness = 0.2
lifetime_randomness = 0.87
emission_shape = 1
emission_sphere_radius = 32.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 400)
initial_velocity_min = 10.0
initial_velocity_max = 200.33
scale_amount_min = 10.0
scale_amount_max = 50.0
scale_amount_curve = SubResource("1")
color_ramp = SubResource("Gradient_fvoor")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="DialogueBox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -272.0
offset_right = 500.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("9_s4y1y")
start_id = "START"
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_wmns8"), SubResource("RichTextEffect_jqe1g"), SubResource("RichTextEffect_j1cit")])

[connection signal="item_selected" from="DemoSelector" to="." method="_on_demo_selected"]
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="Locale" to="." method="_on_locale_selected"]
[connection signal="dialogue_signal" from="DialogueBox" to="." method="_on_dialogue_signal"]
